# mino-gesture

./: CHANGELOG.md  README.md  TODO.md  index.html  package.json  tailwind.config.js
.cursor/rules/: core-coding-standards.mdc  frontend-theme-and-style.mdc  react-structure-conventions.mdc  tauri-rust-conventions.mdc
.github/workflows/: release-macos.yml  rust-cache-warm-macos.yml
docs/: CHANGELOG_GENERATION.md  PRD.md
scripts/: version.mjs
src/: App.tsx  gesture.ts  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: actions.rs  config.rs  gesture.rs  lib.rs  mouse_listener.rs  rules.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: execution.rs
src-tauri/src/domain/: actions.rs
src-tauri/src/platform/: mouse_listener.rs  tray.rs
src/components/: GestureBuilder.tsx  GestureRuleCard.tsx  HistorySection.tsx  HotkeyKeycaps.tsx  KeybindingRecorder.tsx  ResultSection.tsx  RuleSection.tsx  ScreenMap.tsx  icons.tsx
src/components/layout/: PageLayout.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  sheet.tsx  switch.tsx
src/lib/: appRoute.ts  macKeyboard.ts
src/pages/home/: HomePage.tsx
src/pages/panel/: PanelPage.tsx  useGesturePanelState.ts
src/pages/panel/components/: GestureLogOverlay.tsx  GestureRuleCard.tsx  HotkeyKeycaps.tsx  KeybindingRecorder.tsx  ScreenMap.tsx  SettingsSheet.tsx
src/pages/panel/components/settings-sheet/: ChangelogSection.tsx  DataSection.tsx  GeneralSection.tsx  sections.tsx  types.ts  useSettingsOverview.ts
src/types/: app.ts
src/utils/: gesture.ts
