[package]
name = "mino-gesture"
version = "0.1.0"
description = "A lightweight macOS gesture app"
authors = ["you"]
edition = "2024"

[lib]
name = "mino_gesture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rdev = "0.5"
