[package]
name = "mino-gesture"
version = "0.1.0"
description = "A lightweight macOS gesture app"
authors = ["you"]
edition = "2024"

[lib]
name = "mino_gesture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# 使用 git 版本修复 macOS 键盘崩溃问题 (Issue #165, #146)
rdev = { git = "https://github.com/Narsil/rdev.git", rev = "c77b4e5456301cfa7f2226020f2a58f2f8d77c5d" }
