[package]
name = "mino-gesture"
version = "0.1.2"
description = "A lightweight macOS gesture app"
authors = ["you"]
edition = "2024"
default-run = "mino-gesture"

[lib]
name = "mino_gesture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
core-foundation-sys = "0.8"
foreign-types-shared = "0.3"
